# Aiconexus

./: .bandit  .pre-commit-config.yaml  ARCHITECTURE_SDK_GATEWAY_SEPARATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  Makefile  OLLAMA_QUICKSTART.md  PROJECT_STATUS.md  PROJECT_STATUS_FINAL.md  QUICK_START.md  README.md  RELEASE.md  SECURITY.md  SPECIFICATIONS.md  SPRINT_2_REPORT.md  SPRINT_3_REPORT.md  SPRINT_4_REPORT.md  SPRINT_5_REPORT.md  TESTS_SUMMARY.md  gateway_listen.py  prometheus.yml  pyproject.toml  pyproject.toml.quality  pytest.ini  requirements-test.txt  run_gateway.sh  run_ollama_agent_test.sh  setup.cfg  test_all_features.sh  test_ollama_agent.py  test_ollama_gateway.py  test_two_clients.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: quality.yml  release.yml  tests.yml
config/: .env.example  .env.gateway.example  README.md
docs/: ADVANCED_IMPLEMENTATION.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_INDEX.md  FINAL_SUMMARY.txt  GITHUB_SETUP.md  INDEX.md  NEW_STRUCTURE_PLAN.md  PROJECT_REORGANIZED.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROTOCOL_DESIGN.md  README.md  REORGANIZATION_COMPLETE.txt  ROADMAP.md  SDK_GUIDE.md  SDK_IMPLEMENTATION_CHECKLIST.md  SDK_README.md  TECHNICAL_ARCHITECTURE.md
docs/deployment/: DOCKER_GATEWAY.md
docs/guides/: SDK_USAGE.md
docs/sprints/: COMMIT_GUIDE.md  SETUP_COMPLETE.md  SPRINT5_RESUME_FR.md  SPRINT5_SUMMARY.md  SPRINT_1_REPORT.md
examples/: README.md  ollama_agent.py  sdk_complete_example.py
examples/hello_world/: README.md  agent.py
examples/ollama_agent/: README.md
gateway/: README.md
gateway/docker/: .dockerignore  Dockerfile  docker-compose.yml
gateway/src/: gateway_app.py
scripts/: README.md  format_code.sh  gateway-docker.sh  git_commit_sprint5.sh  pre_commit.sh  quickstart.sh  reorganize_project.sh  run_ollama_agent.sh  run_tests.sh  setup_dev_env.sh  test_docker_gateway.sh  verify_docker_setup.sh  verify_setup.sh
src/aiconexus/: __init__.py  cli.py  config.py  constants.py  exceptions.py  types.py
src/aiconexus/api/: __init__.py
src/aiconexus/client/: __init__.py  socket.py
src/aiconexus/core/: __init__.py  agent.py  capability.py  contract.py
src/aiconexus/discovery/: __init__.py
src/aiconexus/economics/: __init__.py
src/aiconexus/execution/: __init__.py
src/aiconexus/marketplace/: __init__.py
src/aiconexus/monitoring/: __init__.py  health.py  metrics.py
src/aiconexus/negotiation/: __init__.py
src/aiconexus/protocol/: __init__.py  errors.py  models.py  security.py  serialization.py
src/aiconexus/sdk/: __init__.py  agent.py  connector.py  executor.py  orchestrator.py  registry.py  tools.py  types.py  validator.py
src/aiconexus/security/: __init__.py
src/aiconexus/storage/: __init__.py
src/aiconexus/utils/: __init__.py
src/aiconexus/webrtc/: __init__.py  datachannel.py  models.py  peer.py  retry.py
src/gateway/: __init__.py  registry.py  server.py
tests/: README.md  conftest.py  fixtures.py  test_map.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  conftest.py  run_server_test.py  test_gateway_integration.py  test_message_exchange.py  test_webrtc_integration.py
tests/integration/gateway/: conftest.py
tests/load/: __init__.py  test_load.py
tests/sdk/: conftest.py  test_agent.py  test_connector.py  test_executor.py  test_orchestrator.py  test_registry.py  test_tools.py  test_types.py  test_validator.py
tests/unit/client/: conftest.py  test_socket.py
tests/unit/gateway/: conftest.py  test_registry.py
tests/unit/monitoring/: test_monitoring.py
tests/unit/protocol/: conftest.py  test_models.py  test_security.py  test_serialization.py
tests/unit/webrtc/: conftest.py  test_datachannel.py  test_peer.py  test_retry.py  test_webrtc_models.py
