[tool.poetry]
name = "aiconexus"
version = "0.1.0"
description = "Universal infrastructure for autonomous AI agents communication, cooperation, and transactions"
authors = ["AIConexus Team <team@aiconexus.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://aiconexus.io"
repository = "https://github.com/aiconexus/aiconexus"
documentation = "https://docs.aiconexus.io"
keywords = [
    "ai-agents",
    "distributed-systems",
    "agent-communication",
    "marketplace",
    "autonomous-agents",
    "m2m-economy"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "aiconexus", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"

# Core dependencies
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.0"
cryptography = "^41.0.0"
aiohttp = "^3.9.0"
httpx = "^0.25.0"

# API & Web
fastapi = "^0.104.0"
uvicorn = { version = "^0.24.0", extras = ["standard"] }
starlette = "^0.27.0"

# Database
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"
redis = "^5.0.0"

# Serialization
msgpack = "^1.0.7"
orjson = "^3.9.10"

# Logging & Monitoring
python-json-logger = "^2.0.7"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-exporter-prometheus = "^0.42b0"
prometheus-client = "^0.19.0"

# Utilities
python-dateutil = "^2.8.2"
pytz = "^2023.3"
uuid6 = "^1.0.9"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
faker = "^20.1.0"
httpx-mock = "^0.30.0"

# Code Quality
black = "^23.12.0"
ruff = "^0.1.11"
mypy = "^1.7.0"
pre-commit = "^3.5.0"
isort = "^5.13.0"

# Documentation
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^1.25.2"
myst-parser = "^2.0.0"

# Development utilities
ipython = "^8.17.0"
ipdb = "^0.13.13"
watchfiles = "^0.20.0"

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"
python-multipart = "^0.0.6"

[tool.poetry.scripts]
aiconexus = "aiconexus.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "build",
    "dist",
    ".venv",
    "migrations",
]

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = """
    --strict-markers
    --tb=short
    --disable-warnings
    -ra
"""
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/aiconexus"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__main__.py",
    "*/cli.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
