[metadata]
name = aiconexus
version = 1.0.0
author = AIConexus Contributors
author_email = team@aiconexus.dev
description = Agent Internet Protocol - Infrastructure for autonomous AI agents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiconexus/aiconexus
project_urls =
    Bug Tracker = https://github.com/aiconexus/aiconexus/issues
    Documentation = https://docs.aiconexus.dev
    Source Code = https://github.com/aiconexus/aiconexus
    Changelog = https://github.com/aiconexus/aiconexus/blob/main/CHANGELOG.md
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
python_requires = >=3.10
install_requires =
    fastapi>=0.100.0
    uvicorn[standard]>=0.23.0
    websockets>=12.0
    pydantic>=2.0.0
    cryptography>=41.0.0
    base58>=2.1.0
    aiortc>=1.5.0
    aiofiles>=23.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0
    pylint>=2.17.0
    bandit>=1.7.5
    pre-commit>=3.0.0

[options.packages.find]
where = src

[flake8]
max-line-length = 127
extend-ignore = E203,W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .tox,
    .venv

[tool:pytest]
testpaths = tests
python_files = test_*.py *_test.py
asyncio_mode = auto
